Source/WebCore/rendering/GridTrackSizingAlgorithm.h
@@ -241,6 +241,7 @@ private:
 
     enum SizingState {
         ColumnSizingFirstIteration,
+        ColumnSizingExtraIterationForSizeContainment,
         RowSizingFirstIteration,
         RowSizingExtraIterationForSizeContainment,
         ColumnSizingSecondIteration,
